<resources>

    <!-- Facebook use this part -->

    <!--<string name="facebook_app_id">1029868440513073</string>-->
    <!--<string name="facebook_login_protocol_scheme">fb1029868440513073</string>-->
    <string name="facebook_app_id">984046781800655</string>
    <string name="facebook_login_protocol_scheme">fb984046781800655</string>


    <!-- Please refer to https://azure.microsoft.com/en-us/services/cognitive-services/face/ to get your subscription key -->
    <!-- If you have subscription key with its corresponding endpoint, you can add them here to use the service -->
    <string name="subscription_key">4f302e618b07499a9ab42c4f99871d9c</string>
    <string name="endpoint">https://westcentralus.api.cognitive.microsoft.com/face/v1.0</string>

    <!-- Main activity -->
    <string name="detection">Detection</string>
    <string name="face_verification">Face to Face Verification</string>
    <string name="person_verification">Face to Person Verification</string>
    <string name="verification">Verification</string>
    <string name="identification">Identification</string>
    <string name="detection_description">Detect faces and show Age, Gender and Emotion.</string>
    <string name="identification_description">Identify the person from a face.</string>

    <!-- filter, wordnet-->
    <string name="filter_image">Image filter</string>
    <string name="wordnet">WordNet Recommend</string>

    <!-- Tips to get subscription key shown on main activity-->
    <string name="app_name">Microsoft Cognitive Services Face</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key with its corresponding endpoint to source file \"app/res/values/strings.xml\" to enable Face API calls.</string>

    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Result:</string>
    <string name="detect">Detect</string>
    <string name="share">SHARE</string>
    <string name="recommend">RECOMMEND</string>



    <!-- Person group management activities -->
    <string name="delete">Delete</string>
    <string name="done_and_save">Save</string>

    <string name="person_group_list">Person Group List</string>
    <string name="person_group_list_tip">- Tap on a group to edit.\n- Long tap to delete.</string>
    <string name="add_person_group">Add Person Group</string>

    <string name="person_group">Person Group</string>
    <string name="person_group_tip">- Tap on a person to edit.\n- Long press to delete.</string>
    <string name="person_group_name">Person group name:</string>
    <string name="type_in_person_group_name_tip">Name (within 30 characters)</string>
    <string name="add_person">Add Person</string>

    <string name="person">Person</string>
    <string name="persons">Persons</string>
    <string name="person_tip">- Long press on a face to delete.</string>
    <string name="type_in_person_name_tip">Name (within 30 characters)</string>
    <string name="add_face">Add Face</string>
    <string name="person_name">Person name:</string>
    <string name="add_face_to_person">Add Faces To Person</string>
    <string name="select_face_tip">Select this person\'s faces (if exist) by click on the checkbox.</string>


    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="view_log">View Log</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>


    <!-- Warning messages -->
    <string name="person_name_empty_warning_message">Person name cannot be empty</string>
    <string name="no_face_to_group">No faces to group</string>
    <string name="no_person_group_selected_for_identification_warning">No person group selected</string>
    <string name="face_cannot_be_identified">Unknown person</string>
    <string name="user_provided_person_name">Person name</string>
    <string name="user_provided_description_data">User data</string>
    <string name="user_provided_person_group_name">Person group name</string>
    <string name="user_provided_person_group_description_data">User data</string>

</resources>
